--- a/src/style/style.css
+++ b/src/style/style.css
@@ -48,7 +48,7 @@ h1 {
 
 /* hero */
 .hero {
-  background-image: url("/assets/hero.png") !important;
+  background-image: url("assets/hero.png") !important;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -92,7 +92,7 @@ h1 {
 }
 
 .komoditasTranslate {
-  width: 326px !important;
+  width: 85% !important;
   height: 200px !important;
   padding: 0 24px !important;
 }
@@ -100,15 +100,22 @@ h1 {
 .komoditas .komoditasTitle:hover .komoditasTranslate {
   opacity: 1;
   transform: translateY(0);
+  margin-bottom: 55px !important;
 }
 
 .komoditas .komoditasTitle h5 {
-  font-size: 24px !important;
+  font-size: var(--text-h2) !important;
   color: #fff !important;
 }
 
+.komoditas .komoditasTitle a {
+  margin-top: 36px !important;
+  background-color: #288ed7 !important;
+  padding: 10px 20px !important;
+}
+
 .komoditas .komoditasTitle p {
-  font-size: var(--text-p) !important;
+  font-size: var(--text-h3) !important;
   color: #fff;
 }
 /* slick style */
@@ -138,7 +145,7 @@ button.slick-arrow {
 }
 
 .artikel .card {
-  width: 356px !important;
+  height: 100% !important;
 }
 
 h5.card-title {
@@ -156,7 +163,7 @@ h5.card-title {
 
 .artikel .card:hover {
   border-radius: 16px;
-  border: 3px solid var(--Base---50, #288ed7);
+  outline: 3px solid #288ed7;
   background: #fff;
   box-shadow: -4px 9px 25px -6px rgba(0, 0, 0, 0.1);
   transition: 2ms ease;
@@ -164,7 +171,7 @@ h5.card-title {
 
 .heroArtikel .card:hover {
   border-radius: 16px;
-  border: 3px solid var(--Base---50, #288ed7);
+  outline: 3px solid #288ed7;
   background: #fff;
   box-shadow: -4px 9px 25px -6px rgba(0, 0, 0, 0.1);
   transition: 2ms ease;
@@ -198,7 +205,10 @@ table thead.bg-green {
 /* ebook */
 .ebook .bg-ebook {
   background-image: url("/assets/ebook.png");
-  width: 261px !important;
+  width: 23%;
+  /* height: 500px !important; */
+  background-size: 100% 100% !important;
+  background-repeat: no-repeat;
   height: 344px !important;
 }
 
@@ -220,8 +230,7 @@ table thead.bg-green {
   border-radius: 16px;
   transition: 5ms ease-in-out;
   box-shadow: -4px 9px 25px -6px rgba(0, 0, 0, 0.1);
-  height: 100%;
-  width: 100%;
+
   background-color: #111;
   opacity: 1;
 }
@@ -277,10 +286,10 @@ footer p {
   background: #fff;
 }
 .artikelCardText h5 {
-  font-size: var(--text-h3);
+  font-size: var(--text-h1);
 }
 
 .artikelCardText p {
-  font-size: var(--text-p) !important;
+  font-size: var(--text-h3) !important;
   color: #103956;
 }
