hover ebook style2

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -204,7 +204,7 @@ table thead.bg-green {
 }
 /* ebook */
 .ebook .bg-ebook {
-  background-image: url("assets/ebook.png");
+  background-image: url("/assets/ebook.png");
   width: 23%;
   /* height: 500px !important; */
   background-size: 100% 100% !important;
