change text footer and color button primary

--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -6,7 +6,7 @@
   --text-blue: #2c338d;
   --text-grey: #6c757d;
   --text-black: #081c2b;
-  --btn-primary: #103956;
+  --btn-primary: #2c338d;
   --bg-table: #e7f4a4;
   --footer: #2c338d;
 
