--- a/src/style/style.css
+++ b/src/style/style.css
@@ -122,9 +122,13 @@ table thead tr th {
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
   }
 
+  .komoditas img {
+    width: 99% !important;
+  }
+
   .komoditasTranslate {
-    width: 80% !important;
-    height: 20% !important;
+    width: 95% !important;
+    height: 30% !important;
     padding: 0 24px !important;
   }
 
@@ -347,7 +351,8 @@ table thead tr th {
   }
 
   .komoditas img {
-    width: 80% !important;
+    width: 100% !important;
+    padding-left: 10px !important;
   }
 
   .komoditas .komoditasTitle .komoditasTranslate {
@@ -356,8 +361,8 @@ table thead tr th {
   }
 
   .komoditasTranslate {
-    width: 80% !important;
-    padding: 0 8px !important;
+    width: 100% !important;
+    padding: 0 28px !important;
   }
 
   .komoditas .komoditasTitle:hover .komoditasTranslate {
