--- a/src/style/style.css
+++ b/src/style/style.css
@@ -78,6 +78,12 @@ button.slick-arrow {
   font-size: var(--text-h3) !important;
 }
 
+.btn-darkblue:hover {
+  background-color: var(--btn-secondary) !important;
+  color: #fff !important;
+  font-weight: bold !important;
+}
+
 /* mobile version */
 @media only screen and (max-width: 768px) {
   body {
@@ -98,25 +104,47 @@ button.slick-arrow {
 
   /* hero */
   .hero {
-    background-image: url("/assets/heroMobile.png") !important;
+    background-image: url("/src/assets/hero.png") !important;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     width: 100vw !important;
-    height: 768px !important;
+    height: 550px !important;
     margin-top: 24px !important;
+  }
+
+  .hero-text {
+    font-size: var(--text-h1) !important;
+    font-weight: bold !important;
+    margin-top: 32px !important;
   }
 
   .hero span {
     color: var(--footer);
   }
   .hero div {
-    padding-top: 170px !important;
+    padding-top: 100px !important;
   }
 
   .btn-darkblue {
     background-color: var(--btn-primary) !important;
     color: #fff !important;
+    font-size: 16px !important;
+    font-weight: bold !important;
+  }
+
+  .btn-outline-darkblue {
+    border: 2px solid var(--btn-primary) !important;
+    color: var(--text-blue) !important;
+    font-size: 16px !important;
+    font-weight: bold !important;
+  }
+
+  .btn-outline-darkblue:hover {
+    background-color: var(--btn-primary) !important;
+    color: #fff !important;
+    font-size: 16px !important;
+    font-weight: bold !important;
   }
 
   .btn-green {
@@ -141,6 +169,32 @@ button.slick-arrow {
     width: 99% !important;
   }
 
+  .komoditas .komoditasTitle {
+    position: relative; /* Menentukan posisi relatif untuk menempatkan overlay */
+  }
+
+  .komoditas .komoditasTitle::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    border-radius: 12px !important;
+    left: 0;
+    width: 99%;
+    height: 100%;
+    background-color: rgba(
+      0,
+      0,
+      0,
+      0.5
+    ); /* Menggunakan rgba untuk overlay hitam dengan opacity */
+    opacity: 0; /* Awalnya opacity 0 */
+    transition: opacity 0.5s ease-in-out; /* Transisi untuk efek fadeIn */
+  }
+
+  .komoditas .komoditasTitle:hover::before {
+    opacity: 1; /* Opacity menjadi 1 saat dihover */
+  }
+
   .komoditasTranslate {
     width: 95% !important;
     height: 30% !important;
@@ -158,7 +212,7 @@ button.slick-arrow {
   }
 
   .komoditas .komoditasTitle a {
-    margin-top: 4px !important;
+    margin-top: 6px !important;
     background-color: #288ed7 !important;
     padding: 10px 20px !important;
   }
@@ -258,11 +312,15 @@ button.slick-arrow {
   }
 
   /* ebook */
+
+  .ebook {
+    margin: 0 auto !important;
+  }
   .ebook .bg-ebook {
-    background-image: url("/assets/ebook.png");
+    background-image: url("/src/assets/ebook.png");
     margin-top: 12px !important;
     /* height: 500px !important; */
-    background-size: 90% 100% !important;
+    background-size: 98.5% 100% !important;
     background-repeat: no-repeat;
     height: 344px !important;
     border-radius: 16px !important;
@@ -288,12 +346,11 @@ button.slick-arrow {
 
   .ebookContent:hover .ebookTranslate {
     visibility: visible;
-
     cursor: pointer;
   }
 
   .ebook a img {
-    margin-right: 12px !important;
+    margin-right: 1px !important;
   }
 
   /* footer */
@@ -303,7 +360,7 @@ button.slick-arrow {
   }
 
   footer p {
-    font-size: 15px !important;
+    font-size: var(--text-p) !important;
   }
 
   .heroArtikel {
@@ -374,6 +431,17 @@ button.slick-arrow {
   .btn-darkblue {
     background-color: var(--btn-primary) !important;
     color: #fff !important;
+    font-weight: bold !important;
+  }
+
+  .btn-outline-darkblue {
+    border: 2px solid var(--btn-primary) !important;
+    color: var(--text-blue) !important;
+  }
+
+  .btn-outline-darkblue:hover {
+    background-color: var(--btn-primary) !important;
+    color: #fff !important;
   }
 
   .btn-green {
@@ -388,13 +456,42 @@ button.slick-arrow {
     font-weight: bold !important;
   }
 
+  .komoditas .komoditasTitle {
+    position: relative; /* Menentukan posisi relatif untuk menempatkan overlay */
+  }
+
+  .komoditas .komoditasTitle::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    border-radius: 18px !important;
+    left: 0;
+    width: 98%;
+    height: 100%;
+    margin-left: 10px !important;
+    background-color: rgba(
+      0,
+      0,
+      0,
+      0.5
+    ); /* Menggunakan rgba untuk overlay hitam dengan opacity */
+    opacity: 0; /* Awalnya opacity 0 */
+    transition: opacity 0.5s ease-in-out; /* Transisi untuk efek fadeIn */
+  }
+
+  .komoditas .komoditasTitle:hover::before {
+    opacity: 1; /* Opacity menjadi 1 saat dihover */
+  }
+
   .komoditas img {
     width: 100% !important;
+
     padding-left: 10px !important;
   }
 
   .komoditas .komoditasTitle .komoditasTranslate {
     transform: translateY(100%);
+
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
   }
 
