added mobile layout version13

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -26,7 +26,7 @@ table thead tr th {
   background-color: #007bff;
   color: white;
   cursor: pointer;
-  padding: 12px;
+  padding: 12px 18px;
   border-radius: 50%;
 }
 
@@ -104,7 +104,7 @@ button.slick-arrow {
 
   /* hero */
   .hero {
-    background-image: url("/src/assets/heroMobile.png") !important;
+    background-image: url("assets/heroMobile.png") !important;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -383,7 +383,7 @@ button.slick-arrow {
   }
 
   .heroArtikel {
-    background-image: url("/assets/backgroundArtikel.png") !important;
+    background-image: url("assets/backgroundArtikel.png") !important;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100% !important;
@@ -430,7 +430,7 @@ button.slick-arrow {
 
   /* hero */
   .hero {
-    background-image: url("/assets/hero.png") !important;
+    background-image: url("assets/hero.png") !important;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -611,7 +611,7 @@ button.slick-arrow {
   }
   /* ebook */
   .ebook .bg-ebook {
-    background-image: url("/assets/ebook.png");
+    background-image: url("assets/ebook.png");
     width: 23%;
     /* height: 500px !important; */
     background-size: 100% 100% !important;
