--- a/src/style/style.css
+++ b/src/style/style.css
@@ -104,7 +104,7 @@ button.slick-arrow {
 
   /* hero */
   .hero {
-    background-image: url("assets/heroMobile.png") !important;
+    background-image: url("/assets/heroMobile.png") !important;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -325,7 +325,7 @@ button.slick-arrow {
     margin-top: 4px !important;
   }
   .ebook .bg-ebook {
-    background-image: url("/assets/ebook.png");
+    background-image: url("//assets/ebook.png");
     margin-top: 12px !important;
     /* height: 500px !important; */
     background-size: 99% 100% !important;
@@ -383,7 +383,7 @@ button.slick-arrow {
   }
 
   .heroArtikel {
-    background-image: url("assets/backgroundArtikel.png") !important;
+    background-image: url("/assets/backgroundArtikel.png") !important;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100% !important;
@@ -430,7 +430,7 @@ button.slick-arrow {
 
   /* hero */
   .hero {
-    background-image: url("assets/hero.png") !important;
+    background-image: url("/assets/hero.png") !important;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -611,7 +611,7 @@ button.slick-arrow {
   }
   /* ebook */
   .ebook .bg-ebook {
-    background-image: url("assets/ebook.png");
+    background-image: url("/assets/ebook.png");
     width: 23%;
     /* height: 500px !important; */
     background-size: 100% 100% !important;
@@ -660,7 +660,7 @@ button.slick-arrow {
   /* ! Artikel css */
   /* hero css */
   .heroArtikel {
-    background-image: url("/assets/backgroundArtikel.png") !important;
+    background-image: url("//assets/backgroundArtikel.png") !important;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
