--- a/src/style/style.css
+++ b/src/style/style.css
@@ -116,9 +116,8 @@ button.slick-arrow {
     background-position: center;
     background-size: contain;
     width: 105% !important;
-
     height: 670px !important;
-    margin-top: -124px !important;
+    margin-top: -214px !important;
   }
 
   .hero-text {
@@ -132,7 +131,7 @@ button.slick-arrow {
   .hero span {
     color: var(--footer);
   }
-  .hero div {
+  .hero {
     padding-top: 100px !important;
   }
 
@@ -164,6 +163,10 @@ button.slick-arrow {
   }
 
   /* komoditas */
+
+  .komoditas {
+    margin-top: -240px !important;
+  }
 
   .komoditas h5 {
     font-size: var(--text-h1);
@@ -447,7 +450,7 @@ button.slick-arrow {
     background-size: cover;
     width: 99vw !important;
     height: 100vh !important;
-    margin-top: -34px !important;
+    margin-top: -54px !important;
   }
 
   .hero-text {
