add komoditas navbar

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -67,12 +67,13 @@ button.slick-arrow {
 }
 
 .nav-link:hover {
-  font-weight: 800 !important;
+  font-weight: bold !important;
+
   color: var(--text-blue) !important;
 }
 
 .nav-link.active {
-  font-weight: 800 !important;
+  font-weight: bold !important;
   color: var(--text-blue) !important;
 }
 
